--- a/categorie prodotti.html
+++ b/categorie prodotti.html
@@ -235,6 +235,7 @@
                                         '<span class="label label-warning pull-right etichette">PROMO</span>'+
                                         '<img class="devicepics" href="#" src="'+data['device_'+i]["percorso"]+'">'+
                                         '<p class="text-center">'+data['device_'+i]["nome"]+'</p>'+
+                                        '<div class="row rigarespo" style="margin-bottom:10px"> <div class="col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 text-center prezzi_scont col-scontati">'+data['device_'+i]["prezzo_intero"]+'€'+'</div> <div class="col-md-5 col-sm-5 text-center prezzi col-scontati">'+data['device_'+i]["prezzo_scontato"]+'€</div> </div>'+
                                         '<p class="rate">&nbsp;</p>'+
                                         '<a  href="pagina_prodotti.html"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
                                     '</div>'+
