--- a/lista_devices.html
+++ b/lista_devices.html
@@ -334,7 +334,19 @@
                 
                 var data = {
                     "action": "get_filteredlist",
-                    "idCategoria": idCategoria
+                    "idCategoria": idCategoria,
+                    /*
+                        Usare un form per queste variabili
+                    */
+                    "promo": ,
+                    "novita": ,
+                    "disponibile": ,
+                    "tipologiaID": ,
+                    "prezzo": ,
+                    "marcaID": ,
+                    "rate": ,
+                    "sisopID": ,
+                    "connessioneID": ,
                     /*
                         -> CREARE (PRENDERE) UNA VARIABILE PER OGNI FILTRO
                         Con un form viene più semplice (vedi esempio completo nella cartella esempi)
