--- a/lista_devices.html
+++ b/lista_devices.html
@@ -338,15 +338,15 @@
                     /*
                         Usare un form per queste variabili
                     */
-                    "promo": ,
-                    "novita": ,
-                    "disponibile": ,
-                    "tipologiaID": ,
-                    "prezzo": ,
-                    "marcaID": ,
-                    "rate": ,
-                    "sisopID": ,
-                    "connessioneID": ,
+                    "promo": 0,
+                    "novita": 0,
+                    "disponibile": 0,
+                    "tipologiaID": 0,
+                    "prezzo": 0,
+                    "marcaID": 0,
+                    "rate": 0,
+                    "sisopID": 0,
+                    "connessioneID": 0
                     /*
                         -> CREARE (PRENDERE) UNA VARIABILE PER OGNI FILTRO
                         Con un form viene più semplice (vedi esempio completo nella cartella esempi)
