--- a/device.html
+++ b/device.html
@@ -254,7 +254,7 @@
                             );
                         }
                         
-                        if(data["descrizione"] != null) {
+                        if(data["descrizione"] != "") {
                             $("#nav-schede").append(
                                 '<li class=""><a data-toggle="tab" href="#descrizione">DESCRIZIONE</a></li>'
                             );
@@ -266,7 +266,7 @@
                             );
                         }
                         
-                        if(data["inclusi"] != null) {
+                        if(data["inclusi"] != "") {
                             $("#nav-schede").append(
                                 '<li class=""><a data-toggle="tab" href="#inclusi">INCLUSI NEL PREZZO</a></li>'
                             );
