--- a/lista_devices.html
+++ b/lista_devices.html
@@ -586,7 +586,7 @@
                                     $("#devlist").append(
                                         '<div class="col-md-3 col-sm-4 col-xs-12 colonne">'+
                                         '<div class="panel panel-default pannelli-store">'+
-                                        '<span class="label label-warning pull-right etichette">PROMO</span>'+
+                                        '<span class="label label-info pull-right etichette">RATE</span>'+
                                         '<img class="devicepics" href="#" src="'+data['device_'+i]["percorso"]+'">'+
                                         '<p class="text-center">'+data['device_'+i]["nome"]+'</p>'+
                                         '<p class="text-center prezzi">'+data['device_'+i]["prezzo_rate"]+'€/mese</p>'+
