--- a/lista_devices.html
+++ b/lista_devices.html
@@ -314,7 +314,7 @@
                                     '<p class="text-center">'+data['device_'+i]["nome"]+'</p>'+
                                     '<div class="row rigarespo" style="margin-bottom:10px"> <div class="col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 text-center prezzi_scont col-scontati">'+data['device_'+i]["prezzo_intero"]+'€'+'</div><div class="col-md-5 col-sm-5 text-center prezzi col-scontati">'+data['device_'+i]["prezzo_scontato"]+'€</div></div>'+
                                     '<p class="rate">&nbsp;</p>'+
-                                    '<a  href="pagina_prodotti.html"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
+                                    '<a  href="device.html?idDevice='+data['device_'+i]["idDevices"]+'"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
                                     '</div>'+
                                     '</div>'
                                 );
@@ -329,7 +329,7 @@
                                         '<p class="text-center">'+data['device_'+i]["nome"]+'</p>'+
                                         '<p class="text-center prezzi">'+data['device_'+i]["prezzo_rate"]+'€/mese</p>'+
                                         '<p class="text-center rate">in '+data['device_'+i]["n_rate"]+' rate senza interessi</p>'+
-                                        '<a  href="pagina_prodotti.html"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
+                                        '<a  href="device.html?idDevice='+data['device_'+i]["idDevices"]+'"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
                                         '</div>'+
                                         '</div>'
                                     );
@@ -344,7 +344,7 @@
                                             '<p class="text-center">'+data['device_'+i]["nome"]+'</p>'+
                                             '<p class="text-center prezzi">'+data['device_'+i]["prezzo_intero"]+'€</p>'+
                                             '<p class="rate">&nbsp;</p>'+
-                                            '<a  href="pagina_prodotti.html"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
+                                            '<a  href="device.html?idDevice='+data['device_'+i]["idDevices"]+'"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
                                             '</div>'+
                                             '</div>'
                                         );
@@ -358,7 +358,7 @@
                                             '<p class="text-center">'+data['device_'+i]["nome"]+'</p>'+
                                             '<p class="text-center prezzi">'+data['device_'+i]["prezzo_intero"]+'€</p>'+
                                             '<p class="rate">&nbsp;</p>'+
-                                            '<a  href="pagina_prodotti.html"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
+                                            '<a  href="device.html?idDevice='+data['device_'+i]["idDevices"]+'"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
                                             '</div>'+
                                             '</div>'
                                         );
@@ -576,7 +576,7 @@
                                     '<p class="text-center">'+data['device_'+i]["nome"]+'</p>'+
                                     '<div class="row rigarespo" style="margin-bottom:10px"> <div class="col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 text-center prezzi_scont col-scontati">'+data['device_'+i]["prezzo_intero"]+'€'+'</div><div class="col-md-5 col-sm-5 text-center prezzi col-scontati">'+data['device_'+i]["prezzo_scontato"]+'€</div></div>'+
                                     '<p class="rate">&nbsp;</p>'+
-                                    '<a  href="pagina_prodotti.html"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
+                                    '<a  href="device.html?idDevice='+data['device_'+i]["idDevices"]+'"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
                                     '</div>'+
                                     '</div>'
                                 );
@@ -591,7 +591,7 @@
                                         '<p class="text-center">'+data['device_'+i]["nome"]+'</p>'+
                                         '<p class="text-center prezzi">'+data['device_'+i]["prezzo_rate"]+'€/mese</p>'+
                                         '<p class="text-center rate">in '+data['device_'+i]["n_rate"]+' rate senza interessi</p>'+
-                                        '<a  href="pagina_prodotti.html"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
+                                        '<a  href="device.html?idDevice='+data['device_'+i]["idDevices"]+'><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
                                         '</div>'+
                                         '</div>'
                                     );
@@ -606,7 +606,7 @@
                                             '<p class="text-center">'+data['device_'+i]["nome"]+'</p>'+
                                             '<p class="text-center prezzi">'+data['device_'+i]["prezzo_intero"]+'€</p>'+
                                             '<p class="rate">&nbsp;</p>'+
-                                            '<a  href="pagina_prodotti.html"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
+                                            '<a  href="device.html?idDevice='+data['device_'+i]["idDevices"]+'><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
                                             '</div>'+
                                             '</div>'
                                         );
@@ -620,7 +620,7 @@
                                             '<p class="text-center">'+data['device_'+i]["nome"]+'</p>'+
                                             '<p class="text-center prezzi">'+data['device_'+i]["prezzo_intero"]+'€</p>'+
                                             '<p class="rate">&nbsp;</p>'+
-                                            '<a  href="pagina_prodotti.html"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
+                                            '<a  href="device.html?idDevice='+data['device_'+i]["idDevices"]+'><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
                                             '</div>'+
                                             '</div>'
                                         );
