fix responsive chi siamo

--- a/progetti.html
+++ b/progetti.html
@@ -83,12 +83,12 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner" style="height:500px;" role="listbox">
                 <div class="item active">
-                    <div class="carousel-caption innov-carousel">
+                    <div class="carousel-caption innov-carousel slider-progetti">
                         <div class="row">
-                            <div class="col-md-3 col-md-offset-2 col-sm-3 col-sm-offset-2 hidden-xs">
+                            <div class="col-md-3 col-md-offset-2 hidden-sm hidden-xs">
                                 <a><img style="border-radius:50%; margin-top:22%;" src="img/evidenza2.jpg"></a>
                             </div>
-                            <div class="col-md-5 col-sm-5">
+                            <div class="col-md-5 col-sm-8 col-sm-offset-2 col-md-offset-0 progetti-text">
                                 <p class="text-center innov-titoli innov-titoli-xs">Sport</p>
                                 <p class="text-center innov-desc innov-desc-xs">Lo sport è passione, rispetto e condivisione di emozioni. Un patrimonio di valori e buone pratiche in cui ci identifichiamo.</p>
                                 <p class="text-center innov-desc innov-desc-xs chisiamosottotitoli">#JUNIOR TIM CUP</p>
@@ -99,15 +99,15 @@
                 </div>
                 
                 <div class="item">
-                    <div class="carousel-caption innov-carousel">
+                    <div class="carousel-caption innov-carousel slider-progetti">
                         <div class="row">
-                            <div class="col-md-5 col-md-offset-2 col-sm-5 col-sm-offset-2">
+                            <div class="col-md-5 col-md-offset-2 col-sm-8 col-sm-offset-2 progetti-text">
                                 <p class="text-center innov-titoli innov-titoli-xs">Ambiente e Sociale</p>
                                 <p class="text-center innov-desc innov-desc-xs">Ci impegnamo ogni giorno per i bisogni delle comunità con soluzioni innovative e altamente tecnologiche.<p>
                                 <p class="text-center innov-desc innov-desc-xs chisiamosottotitoli">TIM SOSTIENE SODALITAS SOCIAL INNOVATION CON UN PREMIO SPECIALE</p>
                                 <p class="text-center innov-desc innov-desc-xs">Come possono contribuire le imprese ad innovare l'universo del Non Profit? Quali sono i vantaggi di questa collaborazione nella vita di tutti i giorni? Se ne parla il 18 novembre al Sodalitas Social Innovation, un evento dedicato ai progetti innovativi del Terzo Settore. Inoltre nell'edizione 2015 un'opportunità in più per chi vuole innovare per il bene comune. Grazie al Premio Speciale TIM-WithYouWeDo, 3 progetti finalisti hanno la possibilità di raccogliere fondi sulla piattaforma di WithYouWedo.</p>
                             </div>
-                            <div class="col-md-3 col-sm-3 hidden-xs">
+                            <div class="col-md-3 hidden-sm hidden-xs">
                                 <a><img style="border-radius:50%;  margin-top:22%;" src="img/evidenza4.jpg"></a>
                             </div>
                         </div>
@@ -115,12 +115,12 @@
                 </div>
                 
                 <div class="item">
-                    <div class="carousel-caption innov-carousel">
+                    <div class="carousel-caption innov-carousel slider-progetti">
                         <div class="row">
-                            <div class="col-md-3 col-md-offset-2 col-sm-3 col-sm-offset-2 hidden-xs">
+                            <div class="col-md-3 col-md-offset-2 hidden-sm hidden-xs">
                                 <a><img style="border-radius:50%; margin-top:22%;" src="img/evidenza3.jpg"></a>
                             </div>
-                            <div class="col-md-5 col-sm-5">
+                            <div class="col-md-5 col-sm-8 col-sm-offset-2 col-md-offset-0 progetti-text">
                                 <p class="text-center innov-titoli innov-titoli-xs">Cultura</p>
                                 <p class="text-center innov-desc innov-desc-xs">Le nuove tecnologie contribuiscono alla diffusione della cultura nel Paese e alla nascita di nuove professioni.</p>
                                 <p class="text-center innov-desc innov-desc-xs chisiamosottotitoli">FESTIVAL DELLE LETTERATURE DELL'ADRIATICO</p>
