etichetta rate e innovazione

--- a/innovazione.html
+++ b/innovazione.html
@@ -60,7 +60,7 @@
                         </div>
                         
                         <div class="col-md-8 col-sm-6 col-xs-12">
-                            <h2 class="siamobanner innov-head">Evolversi significa migliorare per essere in grado di rispondere a nuove sfide.Per accogliere il futuro e farne parte TIM si rinnova anche nel marchio.<br>Fin dalla sua nascita, oltre 20 anni fa, il suo logo è stato un segno di modernità e dinamismo: una promessa di progetti e di orizzonti nuovi. Oggi continua a essere simbolo di cambiamento, fondendo le competenze di due realtà: il trigramma rosso di Telecom Italia, l’intenso blu del marchio TIM e una T a unire questi due mondi.<br>La sintesi di una grande eredità e di un deciso orientamento al domani.<br>Nasce così un’icona semplice e immediata: evoluta, per tempi evoluti.</h2>
+                            <h2 class="siamobanner innov-head">Evolversi significa migliorare per essere in grado di rispondere a nuove sfide</h2>
                         </div>
                         
                         <div class="col-md-2 col-sm-2 hidden-xs">
