--- a/lista_devices.html
+++ b/lista_devices.html
@@ -591,7 +591,7 @@
                 $.ajax({
                     type: "POST",
                     dataType: "json",
-                    url: "query_devices.php", // -> Da finire la funzione
+                    url: "query_devices.php",
                     data: data,
                     success: function(data) {
                         
