--- a/lista_assistenze.html
+++ b/lista_assistenze.html
@@ -132,7 +132,7 @@
             function getAssistlist(idCategoria) {
                  
                 var data = {
-                    "action": "get_assistlist",
+                    "action": "get_assistancelist",
                     "idCategoria": idCategoria
                 };
                 data = $(this).serialize() + "&" + $.param(data);
