--- a/lista_prodotti.html
+++ b/lista_prodotti.html
@@ -9,7 +9,7 @@
         <meta name="description" content="Tim Project Hypermedia Application Course 2016">
 		
 		<title>
-			PRODOTTI: Lista Prodotti
+			TIM - Lista prodotti
 		</title>
 		
 		<link rel="stylesheet" href="css/bootstrap.css">
