--- a/lista_assistenze.html
+++ b/lista_assistenze.html
@@ -61,10 +61,10 @@
 
         
         <div class="row rigarespo">
-            <div class="col-md-2 text-right">
+            <div class="col-sm-2 textalign">
                 <div id="icona-assist"></div>
             </div>
-            <div class="col-md-9 bordosinistro">
+            <div class="col-sm-9 bordosinistro">
                 <div id="nomecategoria"></div>
                 <br>
             </div>
@@ -144,7 +144,9 @@
                             '<img src="'+data["assistenza_"+0]["icona"]+'">'+
                             '<br>'+
                             '<br>'+
-                            '<ul><a href="intro_assistenza.html">Torna indietro &gt;</a></ul>'
+                            '<a href="intro_assistenza.html">Torna indietro &gt;</a>'+
+                            '<br>'+
+                            '<br>'
                         );
                         
                         $("#nomecategoria").html(
