--- a/innovazione.html
+++ b/innovazione.html
@@ -88,13 +88,13 @@
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
             <!-- Wrapper for slides -->
             <div class="carousel-inner dimensionecarousel-innovazione" role="listbox">
-                <div class="item active">
+                <div class="item bordi-item active">
                     <div class="carousel-caption innov-carousel">
                         <div class="row">
-                            <div class="col-md-3 col-md-offset-2 col-sm-3 col-sm-offset-2 hidden-xs">
+                            <div class="col-sm-4 hidden-xs">
                                 <a><img style="border-radius:50%; margin-top:22%;" src="img/evidenza1.jpg"></a>
                             </div>
-                            <div class="col-md-5 col-sm-5">
+                            <div class="col-sm-8">
                                 <p class="text-center innov-titoli innov-titoli-xs">Innovazione</p>
                                 <p class="text-center innov-desc innov-desc-xs">All'innovazione, forza motrice del futuro, dedichiamo impegno e risorse.</p>
                                 <p class="text-center innov-desc innov-desc-xs chisiamosottotitoli">#TIMGIRLSHACKATHON</p>
@@ -104,15 +104,15 @@
                     </div>
                 </div>
                 
-                <div class="item">
+                <div class="item bordi-item">
                     <div class="carousel-caption innov-carousel">
                         <div class="row">
-                            <div class="col-md-5 col-md-offset-2 col-sm-5 col-sm-offset-2">
+                            <div class="col-sm-8">
                                 <p class="text-center innov-titoli innov-titoli-xs">Desideriamo crescere</p>
                                 <p class="text-center innov-desc innov-desc-xs">Mantenere sempre viva la passione, alimentando la propria curiosità con la ferma volontà di migliorarsi è tra i nostri impegni primari: restiamo aperti al mondo e protesi verso il futuro.<p>
                                 <p class="text-center innov-desc innov-desc-xs">Il futuro è un orizzonte che si sposta giorno dopo giorno.<br>La tecnologia permette alle persone di esprimersi e di cogliere le infinite opportunità di un presente in costante cambiamento.<br>La TIM di oggi è protagonista di questo cambiamento, perché porta in sé la solidità tecnologica di Telecom Italia e la visione dinamica e innovatrice che hanno da sempre caratterizzato TIM.</p>
                             </div>
-                            <div class="col-md-3 col-sm-3 hidden-xs">
+                            <div class="col-sm-4 hidden-xs">
                                 <a><img style="border-radius:50%; margin-top:22%;" src="img/valori-02.jpg"></a>
                             </div>
                         </div>
