--- a/testimonials.html
+++ b/testimonials.html
@@ -88,13 +88,13 @@
         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
             <!-- Wrapper for slides -->
             <div class="carousel-inner dimensionecarousel-testimonial" role="listbox">
-                <div class="item active">
+                <div class="item bordi-item active">
                     <div class="carousel-caption innov-carousel">
                         <div class="row">
-                            <div class="col-md-3 col-md-offset-2 col-sm-8 col-sm-offset-2 hidden-xs">
+                            <div class="col-md-4 col-sm-12 hidden-xs">
                                 <a><img style="border-radius:50%" class="posizionepic" src="img/fazio.jpg"></a>
                             </div>
-                            <div class="col-md-5 col-sm-8 col-sm-offset-2 col-md-offset-0">
+                            <div class="col-md-8 col-sm-12">
                                 <p class="text-center innov-titoli innov-titoli-xs">Fabio Fazio</p>
                                 <p class="text-center innov-desc innov-desc-xs">"Il futuro ci sorprenderà"</p>
                                 <!-- 16:9 aspect ratio -->
@@ -106,13 +106,13 @@
                     </div>
                 </div>
                 
-                <div class="item">
+                <div class="item bordi-item">
                     <div class="carousel-caption innov-carousel">
                         <div class="row">
-                            <div class="col-md-3 col-md-offset-2 col-sm-8 col-sm-offset-2 hidden-xs">
+                            <div class="col-md-4 col-sm-12 hidden-xs">
                                 <a><img style="border-radius:50%;" class="posizionepic" src="img/tim.jpg"></a>
                             </div>
-                            <div class="col-md-5 col-sm-8 col-sm-offset-2 col-md-offset-0">
+                            <div class="col-md-8 col-sm-12">
                                 <p class="text-center innov-titoli innov-titoli-xs">Tim Berners-Lee</p>
                                 <p class="text-center innov-desc innov-desc-xs">"Entro i prossimi 25 anni, si arriverà ad un punto in cui i computer saranno intelligenti quanto gli esseri umani"<p>
                                 <!-- 16:9 aspect ratio -->
