--- a/WEBSITE/testimonials.html
+++ b/WEBSITE/testimonials.html
@@ -126,11 +126,11 @@
                 
                 <!-- Controls -->
                 <a class="left carousel-control carousel-sfondo" href="#carousel-example-generic" role="button" data-slide="prev">
-                    <img src="img/keyboard-left-arrow-button.png" style="position: absolute; top:50%">
+                    <img class="glyphicon glyphicon-chevron-left" aria-hidden="true" src="img/keyboard-left-arrow-button.png" style="position: absolute; top:50%">
                     <span class="sr-only">Previous</span>
                 </a>
                 <a class="right carousel-control carousel-sfondo" href="#carousel-example-generic" role="button" data-slide="next">
-                    <img src="img/keyboard-right-arrow-button.png" style="position: absolute; top:50%">
+                    <img class="glyphicon glyphicon-chevron-right" aria-hidden="true" src="img/keyboard-right-arrow-button.png" style="position: absolute; top:50%">
                     <span class="sr-only">Next</span>
                 </a>
                 
