--- a/WEBSITE/lista_prodotti.html
+++ b/WEBSITE/lista_prodotti.html
@@ -33,7 +33,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-					<a class="navbar-brand timbrand" href="home.html">
+					<a class="navbar-brand timbrand" href="index.html">
 						<img alt="TIM" src="img/logo.png">
 					</a>
 				</div>
