fix liste outlet e prodotti/bug link assistenza-prodotti

--- a/WEBSITE/lista_prodotti.html
+++ b/WEBSITE/lista_prodotti.html
@@ -335,7 +335,7 @@
                                     '<div class="panel panel-default pannelli-store">'+
                                     '<span class="label label-warning pull-right etichette">PROMO</span>'+
                                     '<img class="devicepics" href="#" src="'+data['device_'+i]["percorso"]+'">'+
-                                    '<p class="text-center">'+data['device_'+i]["nome"]+'</p>'+
+                                    '<p class="text-center" style="height:30px">'+data['device_'+i]["nome"]+'</p>'+
                                     '<div class="row rigarespo" style="margin-bottom:10px"> <div class="col-md-5 col-md-offset-1 col-sm-5 col-sm-offset-1 text-center prezzi_scont col-scontati">'+data['device_'+i]["prezzo_intero"]+'€'+'</div><div class="col-md-5 col-sm-5 text-center prezzi col-scontati">'+data['device_'+i]["prezzo_scontato"]+'€</div></div>'+
                                     '<p class="rate">&nbsp;</p>'+
                                     '<a  href="prodotto.html?idDevice='+data['device_'+i]["idDevices"]+'&idCategoria='+idCategoria+'"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
@@ -350,7 +350,7 @@
                                         '<div class="panel panel-default pannelli-store">'+
                                         '<span class="label label-info pull-right etichette">RATE</span>'+
                                         '<img class="devicepics" href="#" src="'+data['device_'+i]["percorso"]+'">'+
-                                        '<p class="text-center">'+data['device_'+i]["nome"]+'</p>'+
+                                        '<p class="text-center" style="height:30px">'+data['device_'+i]["nome"]+'</p>'+
                                         '<p class="text-center prezzi">'+data['device_'+i]["prezzo_rate"]+'€/mese</p>'+
                                         '<p class="text-center rate">in '+data['device_'+i]["n_rate"]+' rate senza interessi</p>'+
                                         '<a  href="prodotto.html?idDevice='+data['device_'+i]["idDevices"]+'&idCategoria='+idCategoria+'"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
@@ -365,7 +365,7 @@
                                             '<div class="panel panel-default pannelli-store">'+
                                             '<span class="label label-primary pull-right etichette">NOVIT&#192;</span>'+
                                             '<img class="devicepics" href="#" src="'+data['device_'+i]["percorso"]+'">'+
-                                            '<p class="text-center">'+data['device_'+i]["nome"]+'</p>'+
+                                            '<p class="text-center" style="height:30px">'+data['device_'+i]["nome"]+'</p>'+
                                             '<p class="text-center prezzi">'+data['device_'+i]["prezzo_intero"]+'€</p>'+
                                             '<p class="rate">&nbsp;</p>'+
                                             '<a  href="prodotto.html?idDevice='+data['device_'+i]["idDevices"]+'&idCategoria='+idCategoria+'"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
@@ -379,7 +379,7 @@
                                             '<div class="panel panel-default pannelli-store">'+
                                             '<span class="label label-primary pull-right etichette" style="background-color:white;">&nbsp;</span>'+
                                             '<img class="devicepics" href="#" src="'+data['device_'+i]["percorso"]+'">'+
-                                            '<p class="text-center">'+data['device_'+i]["nome"]+'</p>'+
+                                            '<p class="text-center" style="height:30px">'+data['device_'+i]["nome"]+'</p>'+
                                             '<p class="text-center prezzi">'+data['device_'+i]["prezzo_intero"]+'€</p>'+
                                             '<p class="rate">&nbsp;</p>'+
                                             '<a  href="prodotto.html?idDevice='+data['device_'+i]["idDevices"]+'&idCategoria='+idCategoria+'"><button type="button" class="btn btn-default detail-button">DETTAGLI</button></a>'+
