--- a/WEBSITE/lista_prodotti.html
+++ b/WEBSITE/lista_prodotti.html
@@ -2,9 +2,10 @@
 <html lang="it">
 	
 	<head>
-		
+        
+		<meta http-equiv="Access-Control-Allow-Origin" content="*"/>
         <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
         <meta name="description" content="Tim Project Hypermedia Application Course 2016">
