--- a/WEBSITE/lista_prodotti.html
+++ b/WEBSITE/lista_prodotti.html
@@ -394,6 +394,9 @@
                             }
                         }
                         
+                    },
+                    error {
+                        alert("Errore");
                     }
                 });
                 
