--- a/WEBSITE/lista_prodotti.html
+++ b/WEBSITE/lista_prodotti.html
@@ -395,7 +395,7 @@
                         }
                         
                     },
-                    error function (jqXHR, textStatus, errorThrown) {
+                    error: function (jqXHR, textStatus, errorThrown) {
                         alert('new textStatus=' + textStatus + ' errorThrown=' + errorThrown);
                     }
                 });
