--- a/WEBSITE/intro_sls.html
+++ b/WEBSITE/intro_sls.html
@@ -9,7 +9,7 @@
         <meta name="description" content="Tim Project Hypermedia Application Course 2016">
 		
 		<title>
-			TIM - ASSISTENZA
+			TIM - SLS
 		</title>
 		
 		<link rel="stylesheet" href="css/bootstrap.css">
