--- a/WEBSITE/intro_sls.html
+++ b/WEBSITE/intro_sls.html
@@ -57,7 +57,7 @@
         <!-- HEADER END -->
         
         <ol class="breadcrumb">
-            <li class="active">ASSISTENZA</li>
+            <li class="active">SLS</li>
         </ol>
         
         <br>
