--- a/WEBSITE/innovazione.html
+++ b/WEBSITE/innovazione.html
@@ -91,10 +91,10 @@
                 <div class="item bordi-item active">
                     <div class="carousel-caption innov-carousel">
                         <div class="row">
-                            <div class="col-sm-4 hidden-xs">
+                            <div class="col-sm-5 hidden-xs">
                                 <a><img style="border-radius:50%; margin-top:22%;" src="img/evidenza1.jpg"></a>
                             </div>
-                            <div class="col-sm-8">
+                            <div class="col-sm-7 col-xs-12">
                                 <p class="text-center innov-titoli innov-titoli-xs">Innovazione</p>
                                 <p class="text-center innov-desc innov-desc-xs">All'innovazione, forza motrice del futuro, dedichiamo impegno e risorse.</p>
                                 <p class="text-center innov-desc innov-desc-xs chisiamosottotitoli">#TIMGIRLSHACKATHON</p>
@@ -107,7 +107,7 @@
                 <div class="item bordi-item">
                     <div class="carousel-caption innov-carousel">
                         <div class="row">
-                            <div class="col-sm-8">
+                            <div class="col-sm-8 col-xs-12">
                                 <p class="text-center innov-titoli innov-titoli-xs">Desideriamo crescere</p>
                                 <p class="text-center innov-desc innov-desc-xs">Mantenere sempre viva la passione, alimentando la propria curiosità con la ferma volontà di migliorarsi è tra i nostri impegni primari: restiamo aperti al mondo e protesi verso il futuro.<p>
                                 <p class="text-center innov-desc innov-desc-xs">Il futuro è un orizzonte che si sposta giorno dopo giorno.<br>La tecnologia permette alle persone di esprimersi e di cogliere le infinite opportunità di un presente in costante cambiamento.<br>La TIM di oggi è protagonista di questo cambiamento, perché porta in sé la solidità tecnologica di Telecom Italia e la visione dinamica e innovatrice che hanno da sempre caratterizzato TIM.</p>
