--- a/WEBSITE/innovazione.html
+++ b/WEBSITE/innovazione.html
@@ -15,7 +15,7 @@
 		<link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/bootstrap-theme.css">
         <link rel="stylesheet" href="css/tim/tim-components.css">
-        <link rel="stylesheet" href="css/tim/innovazione.css">
+        <link rel="stylesheet" href="css/tim/chisiamo.css">
         <link rel="stylesheet" href="css/tim/utility-classes.css">
         <link rel="stylesheet" href="css/tim/mobile.css">
 		
