--- a/WEBSITE/carrello.html
+++ b/WEBSITE/carrello.html
@@ -235,7 +235,7 @@
                         $("#main-content").html(
                             '<div class="row">'+
                                 '<div class="col-md-6">'+
-                                    '<form name="dati" action="carrello.html" method="get" onsubmit="return controllo()">'+
+                                    '<form name="dati" action="carrello.html" method="post" onsubmit="return controllo()">'+
                                         '<h2>Inserisci i tuoi dati</h2>'+
                                         '<div class="form-group">'+
                                             '<label for="nome">Nome</label>'+
